fix(core): remove stage z-index

--- a/packages/core/src/index.css
+++ b/packages/core/src/index.css
@@ -10,7 +10,6 @@
     top: 0;
     transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
     user-select: none;
-    z-index: 9999;
 }
 
 .ccl-stage .cmt {
